# csit_rabbit_mini_challenge

./: Cargo.toml  Dockerfile
src/: main.rs
