[package]
name = "csit-rest-mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
iso8601-timestamp = "0.2.11"
mongodb = {version = "2.6.0", features = ["bson-chrono-0_4"]}
serde = "1.0.166"
